fix: sidebar bottom color flickering while changing menus

--- a/src/fixantdstyle.css
+++ b/src/fixantdstyle.css
@@ -1,3 +1,4 @@
 .ant-layout-sider-children {
   background-color: white !important;
+  margin-top: 0 !important;
 }
